--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-portfolio-sharing",
+  "name": "flexibble",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,24 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.16",
+    "@headlessui/react": "^1.7.15",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "20.5.0",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
-    "cloudinary": "^1.40.0",
+    "@types/node": "20.3.1",
+    "@types/react": "18.2.13",
+    "@types/react-dom": "18.2.6",
+    "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "cloudinary": "^1.37.1",
+    "coffee-script": "^1.12.7",
+    "encoding": "^0.1.13",
     "graphql-request": "^6.1.0",
-    "jsonwebtoken": "^9.0.1",
-    "next": "13.4.13",
-    "next-auth": "^4.23.0",
-    "postcss": "8.4.27",
+    "jsonwebtoken": "^9.0.0",
+    "next": "13.4.6",
+    "next-auth": "^4.22.1",
+    "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "supports-color": "^9.3.1",
+    "tailwindcss": "3.3.2"
   },
   "devDependencies": {
-    "@grafbase/sdk": "^0.5.0"
+    "@grafbase/sdk": "^0.0.25",
+    "find-unused-exports": "^5.0.0",
+    "typescript": "5.1.6"
   }
 }
