--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "flexibble",
   "version": "0.1.0",
+  "homepage": "https://portfolio-sharing.vercel.app/",
   "private": true,
   "scripts": {
     "dev": "next dev",
